--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="box">
                         <img src="Images/EmployeeManagement.png" alt="">
                         <div Emp Management</div>
-                        <p class="projectPara"> Human Resource Managment<br>
+                        <p class="projectPara"> Human Resource Management<br>
                             Developed and Implemented a Java Based Application to control and manage the records of the Employees and Departments for Human Resource Management.<br>
                             <b>Features :-</b> Register, Login, Logout, Update</p><br>
                         <div class="techStack"><b>Tech Stacks :- </b>  JAVA | My SQL | Spring Boot | Hibernate   </div>
@@ -184,8 +184,8 @@
                         <img src="Images/HospitalWebsite.png" alt="">
                         <div Hospital Management</div>
                         <p class="projectPara"> Human Resource Managment<br>
-                            Project for Hospital Management System WEbsite with both Front
-                            End and Back End..<br>
+                            Project for Hospital Management System Website with both Front
+                            End and Back End.<br>
                             <b>Features :-</b>  User Signup, Verification, login and Booking an
                             appointment with doctor</p><br>
                         <div class="techStack"><b>Tech Stacks :- </b>   Core Java | Spring Boot | Hibernate | Spring |
@@ -280,12 +280,10 @@
 
 <script src="script.js"></script>
 <script>
-    GitHubCalendar(".cardcal", "PrathmeshS-0595");
-
-    GitHubCalendar(".cardcal", "PrathmeshS-0595", { responsive: true });
+  
     
    function cont(){
-    return window.open('./Aniket Java Resume.pdf','-blank');
+    return window.open('./Aniket Deshmukh JavaCV.pdf','-blank');
    }
    
 </script>
